events lpage alignment correction

--- a/public/css/LandingPage.css
+++ b/public/css/LandingPage.css
@@ -640,7 +640,7 @@ body {
   font-family: AppleGaramound-bold-italic;
   font-size: 7rem;
   padding-right: 10vw;
-  padding-left: 4vw;
+  padding-left: 6vw;
 }
 .events_top p {
   font-family: satoshi;
